fixed responsivness on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -8,16 +8,18 @@ body {
     min-height: 100px;
     padding-top: 20px !important;
     gap: 5px;
-    font-size: 20px !important;
+    font-size: 19px !important;
 }
-
-.logo-container {
-    display: flex;
+.navbar-nav
+{
+    align-items: center !important;
 }
 
 .logo-image {
     max-width: 100%;
+    min-width: 100px;
     width: 200px;
+    margin-top: 10px;
 }
 
 .wrapper {
@@ -58,10 +60,6 @@ footer {
     gap: 15px;
 }
 
-.nav-item {
-    /* font-size: 25px; */
-}
-
 .header-profile:hover {
     transition: all 0.3s ease;
     transform: scale(1.07);
@@ -71,12 +69,13 @@ footer {
     border: none;
     background: none;
     padding-left: 4px;
-    font-size: 22px;
-    color: rgb(255, 129, 84);
+    font-size: 20px;
+    color: rgb(0,0,0, 0.75);
 }
 
+
 .nav-btn:hover {
-    color: orangered;
+    color: rgb(0,0,0, 0.85);
 }
 
 #myForm {
@@ -158,14 +157,11 @@ footer {
     }
 }
 
-@media (max-width: 1400px) {
-    .navbar-expand-lg .navbar-nav {
-        width: 230px;
-    }
-}
 
-@media (max-width: 992px) {
-    .logo-container {
-        display: flex;
+@media (max-width: 1380px)
+{
+    .nav-item
+    {
+        width: max-content;
     }
 }
